force-app/main/default/objects/Account/fields/Agri_Next_Calculated_Month__c.field-meta.xml
<CustomField>
    <fullName>Agri_Next_Calculated_Month__c</fullName>
    <label>Agri Next Calculated Month</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>