force-app/main/default/objects/Account/fields/Agri_Next_Calculated_Year__c.field-meta.xml
<CustomField>
    <fullName>Agri_Next_Calculated_Year__c</fullName>
    <label>Agri Next Calculated Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>