force-app/main/default/objects/Account/fields/Last_Revision_service__c.field-meta.xml
<CustomField>
    <fullName>Last_Revision_service__c</fullName>
    <label>Last Revision/service</label>
    <type>Date</type>
</CustomField>